refactor: 统一排序字段为 order_num